# indufix-llamaindex-toolkit

./: .deployment_url.txt  .env.example  .gitignore  AGENT_FIX_SUMMARY.md  AGENT_IMPLEMENTATION.md  AGENT_INTEGRATION_FINDINGS.md  AUTHENTICATION_FIX_SUMMARY.md  CHANGES.md  CLI_TESTING_README.md  CLI_TOOLS_README.md  CLI_TOOLS_SUMMARY.md  COMPLETE_SETUP_EXECUTION_PLAN.md  DEPLOYMENT_AUTOMATION_README.md  DEPLOYMENT_ENV_VARS.md  DEPLOYMENT_EXECUTION_CHECKLIST.txt  DEPLOYMENT_FIXES_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_OPERATIONS_GUIDE.md  DEPLOYMENT_READY_CHECKLIST.md  DEPLOYMENT_SECRETS_CONFIGURED.md  DEPLOYMENT_SESSION_SUMMARY.md  DEPLOYMENT_SETUP.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_TROUBLESHOOTING.md  DEPLOYMENT_VERIFICATION_SUMMARY.md  EXECUTION_PLAN_COMPLETE.md  EXHAUSTIVE_CLI_API_INVESTIGATION_REPORT.md  FINAL_SETUP_SUMMARY.md  GITHUB_SECRETS_SETUP_GUIDE.md  GIT_GITHUB_INTEGRATION_ANALYSIS.md  GIT_OPERATIONS_PLAN.md  GIT_OPERATIONS_QUICK_REFERENCE.md  GIT_OPERATIONS_SUMMARY.md  GIT_WORKFLOW.md  GUIA_UI_INTEGRACAO_PASSO_A_PASSO.md  HOW_TO_FIND_INTEGRATION_ID.md  INTEGRATION_FINDINGS_EXECUTIVE_SUMMARY.md  INTEGRATION_SUMMARY.md  LLAMAINDEX_RULE_RETRIEVER_INTEGRATION.md  (+93 more)
.github/workflows/: deploy_langsmith.yml
deployment/: __init__.py  deploy_ci.py  deploy_cli.py  deploy_config.yaml  deploy_config_docker.yaml  deploy_config_prod.yaml  deploy_github_action.py  example_usage.py  exceptions.py  langsmith_deploy.py  update_deployment_sdk.py
indufix_toolkit/: __init__.py
tools/: find_langsmith_integration.py
