[project]
name = "indufix-llamaindex-toolkit"
version = "0.1.0"
description = "LlamaIndex Cloud integration toolkit for Indufix SKU Matcher"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langsmith-tool-server>=0.2.8",
        "langchain-cli-v2>=0.0.1",
            "httpx>=0.27.0",
                "python-dotenv>=1.0.0",
                ]

                [build-system]
                requires = ["setuptools>=61.0"]
                build-backend = "setuptools.build_meta"

                [tool.setuptools.packages.find]
                where = ["."]
