[project]
name = "indufix-llamaindex-toolkit"
version = "0.1.0"
description = "LlamaIndex Cloud toolkit for Indufix SKU Matcher - LangSmith Tool Server integration"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.3.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "llama-cloud-services>=0.1.0",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["indufix_toolkit*"]
